--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,12 @@
     text-wrap: balance;
   }
 }
-
+@font-face {
+  font-family: 'Castor One';
+  src: url('fonts/Castor-One.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 
 
