--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,11 @@
   color: #0e0c0c96
 } */
 
+.super::before {
+  inset: 0;
+  background-color: red;
+  z-index: 99999;
+}
 
 @layer base {
   :root {
